# openmined-fl-flower

./: .gitignore  0_create_datasets.py  2_start_datasite.py  3_clean_all_datasites.py  4_send_job_request.py  D1_prepare_datasite_distributed.py  D2_submit_code_fl_job.py  D3_approve_jobs.py  D4_start_rds.py  D5_start_training_datascientist.py  README.md  S1_run_simulation.py  X_run_simulation.py  justfile  main.py  pyproject.toml
simple-classifier/: .gitignore  README.md  pyproject.toml
simple-classifier/simple_classifier/: __init__.py  client_app.py  server_app.py  task.py
