[project]
name = "openmined-fl-flower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]==1.21.0",
    "syft-flwr>=0.4.0",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "scikit-learn>=1.7.2",
]

# dependencies = [
#     "flwr[simulation]>=1.22.0",
#     "huggingface-hub>=0.35.3",
#     "ipykernel>=6.30.1",
#     "scikit-learn>=1.7.2",
#     "syft-flwr>=0.2.1",
#     "syft-rds>=0.3.1",
# ]
