[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "simple-classifier"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.21.0",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn>=1.6.1",
    "syft-flwr>=0.2.1",
    "pandas>=2.3.3",
    "syft_flwr==0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "datascientist"

[tool.flwr.app.components]
serverapp = "simple_classifier.server_app:app"
clientapp = "simple_classifier.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
penalty = "l2"
local-epochs = 1
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 10

[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true

[tool.syft_flwr]
app_name = "ds@openmined.org_simple-classifier_1760452818"
datasites = [
    "k9o3t7dyx@mozmail.com",
    "jpvelasco@salud.madrid.org",

]
aggregator = "msicilia@gmail.com"
